--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                             <div class="limit-box">
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
-                                        <li class="active"><a href="#home">Home</a></li>
-                                        <li><a href="#about">About Us</a></li>
-                                        <li><a href="#fruits">Fruits</a></li>
+                                        <li class="active"><a href="#home">Inicio</a></li>
+                                        <li><a href="#about">Quiénes Somos</a></li>
+                                        <li><a href="#fruits">Productos</a></li>
                                         <li><a href="#blog">Blog</a></li>
-                                        <li><a href="#contact">Contact Us</a></li>
+                                        <li><a href="#contact">Contacto</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -78,18 +78,22 @@
                 <div class="col-md-6">
                     <div class="full">
                         <h1><strong class="cur">Luminarias</strong><br>Industriales y viales</h1>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature</p>
-                            <div class="button_section"><a class="main_bt" href="#">Buy Now</a></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="full text_align_center">
-                        <img class="slide_img" src="images/slider_img.png" alt="#" /> 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                            <p>Soluciones en iluminación LED para industria, calles y espacios públicos. Alta eficiencia, durabilidad y calidad certificada.
+
+</p>
+<div class="button_section">
+  <a class="main_bt" href="https://wa.me/524422333003?text=Hola%2C%20quiero%20más%20información%20sobre%20las%20luminarias.">Whatsapp</a>
+</div>
+</div>
+</div>
+<div class="col-md-6">
+    <div class="full text_align_center">
+        <img class="slide_img" src="images/slider_img.png" alt="#" /> 
+    </div>
+</div>
+</div>
+</div>
+</section>
 
     <!-- about -->
     <div id="about" class="about layout_padding">
@@ -100,13 +104,13 @@
                 </div>
                 <div class="col-md-6">
                     <div class="heading margin_top_30">
-                        <h2>About our shop</h2>
+                        <h2>Sobre Nosotros</h2>
                     </div>
                     <div class="full margin_top_20">
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Somos una empresa especializada en luminarias LED industriales y viales. Ofrecemos productos de alto rendimiento diseñados para entornos exigentes, garantizando ahorro energético y una larga vida útil. Nuestro compromiso es brindar soluciones confiables, seguras y sustentables.</p>
                     </div>
                     <div class="full margin_top_30">
-                        <a class="main_bt" href="#">Read More</a>
+                        <a class="main_bt" href="#">Leer más</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +123,7 @@
             <div class="row">
                <div class="col-md-12">
                     <div class="heading full text_align_center">
-                        <h2 class="white_font full text_align_center">Our Fruits</h2>
+                        <h2 class="white_font full text_align_center">Productos</h2>
                     </div>
                 </div>
             </div>
@@ -129,7 +133,7 @@
                         <img class="img-responsive" src="images/f1.png" alt="#" />
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Black Grapes<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Luminarias Industriales<br><strong class="theme_blue">Iluminación de alto rendimiento para naves, fábricas y centros logísticos. Diseñadas para operar en condiciones extremas.</strong></h3>
                     </div>   
                 </div>
                 <div class="col-md-4 margin_top_30">
@@ -137,7 +141,7 @@
                         <img class="img-responsive" src="images/f2.png" alt="#" />
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Pineapple<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Luminarias Viales<br><strong class="theme_blue">Luminarias LED para calles, carreteras y espacios públicos. Tecnología de punta para mayor visibilidad y eficiencia.</strong></h3>
                     </div>
                 </div>
                 <div class="col-md-4 margin_top_30">
@@ -145,7 +149,7 @@
                         <img class="img-responsive" src="images/f3.png" alt="#" />
                     </div>
                     <div class="full text_align_center">
-                        <h3 class="white_font">Bananas<br><strong class="theme_blue">Fresh Fruit</strong></h3>
+                        <h3 class="white_font">Proyectos a Medida<br><strong class="theme_blue">Desarrollamos soluciones personalizadas según tus necesidades, cumpliendo con normas nacionales e internacionales.</strong></h3>
                     </div>
                 </div>
             </div>
@@ -158,21 +162,24 @@
             <div class="row">
                <div class="col-md-6">
                     <div class="full main_heading_1">
-                        <h2>Fresh Lemon</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing el sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doloreprehenderin </p>
+                        <h2>Luminaria Solar All-in-One Npolis Shine5 (100W/150W/200W)</h2>
+                        <p>Luminaria solar tipo All-in-One, ideal para alumbrado vial o áreas exteriores sin conexión eléctrica.
+Cuenta con panel policristalino integrado, batería de litio 3.2V, sensor de movimiento y cuerpo de aluminio resistente (IP65).
+Temperatura de color 6500K, vida útil de hasta 50,000 horas.
+Montaje recomendado de 5 a 7 metros de altura. </p>
                     </div>   
-                    <div class="full margin_top_30">
-                        <a class="main_bt" href="#">Read More</a>
-                    </div>
-                </div>
-                <div class="col-md-6 margin_top_30 padding_right_0">
-                    <div class="full">
-                        <img src="images/green_fr.png" alt="#" />
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="full margin_top_30">
+    <a class="main_bt" href="https://wa.me/524422333003?text=Hola%2C%20me%20interesa%20más%20información%20sobre%20sus%20productos%20de%20iluminación.">Whatsapp</a>
+</div>
+</div>
+<div class="col-md-6 margin_top_30 padding_right_0">
+    <div class="full">
+        <img src="images/green_fr.png" alt="#" />
     </div>
+</div>
+</div>
+</div>
+</div>
     <!-- end section -->
 <!-- section -->
     <div id="blog" class="section dark_bg layout_padding right_white">
@@ -180,7 +187,7 @@
             <div class="row">
                <div class="col-md-12">
                     <div class="heading full text_align_center">
-                        <h2 class="white_font full text_align_center">Our Blog</h2>
+                        <h2 class="white_font full text_align_center">Blog</h2>
                     </div>
                 </div>
             </div>
@@ -191,8 +198,9 @@
                         <img class="img-responsive" src="images/blog1.png" alt="#" />
                     </div>
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
-                        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
+                        <h5 class="white_font">Post por Luminarias MX - 03/06/2025</h3>
+                        <p>¿Cómo elegir la luminaria adecuada para tu industria?
+Te explicamos los factores clave: potencia, tipo de óptica, instalación y durabilidad.</p>
                     </div> 
                      </div>  
                 </div>
@@ -202,8 +210,9 @@
                         <img class="img-responsive" src="images/blog2.png" alt="#" />
                     </div> 
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
-                        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
+                        <h5 class="white_font">Post por Luminarias MX - 27/05/2025</h3>
+                        <p>Ventajas de las luminarias LED frente a las tradicionales
+Ahorro energético, menor mantenimiento y mayor vida útil.</p>
                     </div>
                      </div>
                 </div>
@@ -213,8 +222,9 @@
                         <img class="img-responsive" src="images/blog3.png" alt="#" />
                     </div> 
                     <div class="full blog_blue text_align_center">
-                        <h5 class="white_font">Post by David Mark 27/07/2019</h3>
-                        <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniadolor..</p>
+                        <h5 class="white_font">Post por Luminarias MX - 20/05/2025</h3>
+                        <p>Normativas para iluminación vial en México
+Conoce los requisitos y certificaciones necesarias para iluminar vialidades.</p>
                     </div>
                     </div>
                 </div>
@@ -235,25 +245,25 @@
 
                <div class="col-md-6">
                 <div class="heading">
-                        <h2>Request a <strong class="theme_blue">Call Back</strong></h2>
+                        <h2>Solicita <strong class="theme_blue">una Llamada</strong></h2>
                     </div>
                     <div class="full margin_top_20">
                         <form>
                         <div class="row">
                             <div class="col-sm-12">
-                               <input class="form-control" placeholder="Your Name" type="text" required="">
+                               <input class="form-control" placeholder="Tu nombre" type="text" required="">
                             </div>
                             <div class="col-sm-12">
-                               <input class="form-control" placeholder="Email" type="Email" required="">
+                               <input class="form-control" placeholder="Correo electrónico" type="Email" required="">
                             </div>
                             <div class="col-sm-12">
-                                <input class="form-control" placeholder="Phone" type="text" required="">
+                                <input class="form-control" placeholder="Teléfono" type="text" required="">
                             </div>
                             <div class="col-sm-12">
-                                <textarea class="form-control textarea" placeholder="Message"></textarea>
+                                <textarea class="form-control textarea" placeholder="Mensaje"></textarea>
                             </div>
                         </div>
-                        <button class="main_bt">Send</button>
+                        <button class="main_bt">Enviar</button>
                     </form>
                     </div>   
                     
@@ -270,30 +280,31 @@
             <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Contact Us</h3>
-                            <p>Healing Center, 176 W Street name, New York, NY<br><br>(+91) 987 654 3210<br><br>demo@gmail.com</p>
+                            <h3>Información de Contacto</h3>
+                            <p>Dirección:
+Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del Coyote<br><br>Tel/WhatsApp: 442 2333 003 <br><br>radiorifa@gmail.com</p>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Pages</h3>
+                            <h3>Paginas</h3>
                             <p>
-                              <a href="#home">Home</a><br>
-                              <a href="#about">About Us</a><br>
-                              <a href="#fruits">Fruits</a><br>
+                              <a href="#home">Inicio</a><br>
+                              <a href="#about">Quiénes Somos</a><br>
+                              <a href="#fruits">Productos</a><br>
                               <a href="#blog">Blog</a><br>
-                              <a href="#contact">Contact Us</a>
+                              <a href="#contact">Contacto</a>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Recent Post</h3>
-                            <p><span><img src="images/f_b1.png"></span><span>consectetur adipisc elit,<br>sed do eiusmod</span></p>
-                            <p class="margin_top_20"><span><img src="images/f_b2.png"></span><span>consectetur adipisc elit,<br>sed do eiusmod</span></p>
-                            <p class="margin_top_20"><span><img src="images/f_b3.png"></span><span>consectetur adipisc elit,<br>sed do eiusmod</span></p>
+                            <h3>Publicaciones Recientes</h3>
+                            <p><span><img src="images/f_b1.png"></span><span>Ventajas de cambiar a luminarias LED industriales<br>Ahorra hasta un 60% en consumo energético</span></p>
+                            <p class="margin_top_20"><span><img src="images/f_b2.png"></span><span>Cómo elegir la luminaria vial ideal para tu proyecto<br>potencia, óptica, altura de instalación y certificación.</span></p>
+                            <p class="margin_top_20"><span><img src="images/f_b3.png"></span><span>Tendencias 2025 en iluminación urbana<br>Diseños más eficientes, con sensores inteligentes y control remoto.</span></p>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Newsletter</h3>
+                            <h3>Boletín de Novedades</h3>
                             <p>
                                 <form>
-                                    <input type="text" name="email" placeholder="Enter Your Email" /> 
-                                    <button>Subscribe</button>
+                                    <input type="text" name="email" placeholder="Ingresa tu correo electrónico:" /> 
+                                    <button>Suscríbete</button>
                                 </form>
                             </p>
                         </div>
@@ -302,7 +313,7 @@
         </div>
         <div class="copyright">
             <div class="container">
-                <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a></p>
+                <p>Copyright 2025. Todos los derechos reservados.
             </div>
         </div>
     </footer>
