--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-    <!-- basic -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
-    <title>Jof</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- bootstrap css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- style css -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="css/responsive.css">
-    <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  <!-- Metas básicas -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- SEO -->
+  <title>Luminarias LED Industriales y Viales | Jof México</title>
+  <meta name="description" content="Fabricamos luminarias LED industriales, viales y solares en México. Soluciones en interconexión industrial, campanas de alto rendimiento y alumbrado público.">
+  <meta name="keywords" content="luminarias LED, iluminación industrial, alumbrado vial, luminarias solares, iluminación exterior">
+  <meta name="author" content="Jof México">
+
+  <!-- Open Graph (para redes sociales) -->
+  <meta property="og:title" content="Luminarias LED Industriales y Viales | Jof México">
+  <meta property="og:description" content="Soluciones en luminarias LED industriales, solares y viales de alta eficiencia en México.">
+  <meta property="og:image" content="https://www.jofmexico.com/images/og-image.jpg"> <!-- Reemplaza con tu imagen -->
+  <meta property="og:url" content="https://www.jofmexico.com/">
+  <meta property="og:type" content="website">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/fevicon.png" type="image/png" />
+
+  <!-- IE Support -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <!-- body -->
 
@@ -107,7 +113,9 @@
                         <h2>Sobre Nosotros</h2>
                     </div>
                     <div class="full margin_top_20">
-                        <p>Somos una empresa especializada en luminarias LED industriales y viales. Ofrecemos productos de alto rendimiento diseñados para entornos exigentes, garantizando ahorro energético y una larga vida útil. Nuestro compromiso es brindar soluciones confiables, seguras y sustentables.</p>
+                        <p>Somos una empresa mexicana con más de 20 años de experiencia dedicada a soluciones integrales de iluminación profesional, especializada en luminarias LED industriales, viales e Industriales. Ofrecemos productos de alto rendimiento, como luminarias tipo alumbrado público, luminarias solares con batería y panel solar integrado, campanas industriales LED postes metálicos, bases de concreto prefabricado y servicios completos de instalación.
+Nuestros equipos están diseñados para entornos exigentes, garantizando eficiencia energética, ahorro en consumo eléctrico y una larga vida útil. Brindamos asesoría técnica especializada y desarrollamos diseños luminotécnicos personalizados que cumplen con las normativas vigentes en México, asegurando calidad, seguridad y confort visual en cada proyecto.
+</p>
                     </div>
                     <div class="full margin_top_30">
                         <a class="main_bt" href="#">Leer más</a>
@@ -117,8 +125,19 @@
         </div>
     </div>
     <!-- end about -->
+     <!-- Baja tu consumo electrico: Interconexión Solar Industrial-->
+<div class="section layout_padding" style="background-color: white; text-align: center;">
+    <div class="container">
+        <h2 style="font-weight: bold; font-size: 300%;">Baja tu consumo eléctrico: Interconexión Solar Industrial</h2>
+        <p>Chatea con nosotros para asesorarte</p>
+        <img src="images/interconexion_solar_industrial_1.PNG" 
+             alt="Ficha técnica Interconexión Solar Industrial 1" 
+             width="612" height="792" 
+             style="background:#fff; max-width:100%; height:auto; margin-top:20px;">
+    </div>
+</div>
     <!-- section -->
-    <div id="fruits" class="section dark_bg layout_padding left_white">
+    <div id="fruits" class="section dark_bg layout_padding center-desk">
         <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -162,8 +181,8 @@
             <div class="row">
                <div class="col-md-6">
                     <div class="full main_heading_1">
-                        <h2>Luminaria Solar All-in-One Npolis Shine5 (100W/150W/200W)</h2>
-                        <p>Luminaria solar tipo All-in-One, ideal para alumbrado vial o áreas exteriores sin conexión eléctrica.
+                        <h2>Luminaria Solar All-in-One Npolis Shine5 </h2>
+                        <p>Luminaria solar tipo All-in-One,(100W/150W/200W), ideal para alumbrado vial o áreas exteriores sin conexión eléctrica.
 Cuenta con panel policristalino integrado, batería de litio 3.2V, sensor de movimiento y cuerpo de aluminio resistente (IP65).
 Temperatura de color 6500K, vida útil de hasta 50,000 horas.
 Montaje recomendado de 5 a 7 metros de altura. </p>
@@ -182,7 +201,15 @@ Montaje recomendado de 5 a 7 metros de altura. </p>
 </div>
     <!-- end section -->
 <!-- section -->
-    <div id="blog" class="section dark_bg layout_padding right_white">
+ <!-- Ficha técnica: Solar Street 80 -->
+<div class="section layout_padding" style="background-color: white; text-align: center;">
+    <div class="container">
+<h2 style="font-weight: bold; font-size: 300%;">Solar Street 80 - Montaje en Poste 9</h2>
+       <img src="images/solar_street_80.PNG" alt="Ficha técnica Solar Street 80" width="612" height="792">
+    </div>
+</div>
+
+    <div id="blog" class="section dark_bg layout_padding CENTER_white">
         <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -244,30 +271,33 @@ Conoce los requisitos y certificaciones necesarias para iluminar vialidades.</p>
                 </div>
 
                <div class="col-md-6">
-                <div class="heading">
-                        <h2>Solicita <strong class="theme_blue">una Llamada</strong></h2>
-                    </div>
-                    <div class="full margin_top_20">
-                        <form>
-                        <div class="row">
-                            <div class="col-sm-12">
-                               <input class="form-control" placeholder="Tu nombre" type="text" required="">
-                            </div>
-                            <div class="col-sm-12">
-                               <input class="form-control" placeholder="Correo electrónico" type="Email" required="">
-                            </div>
-                            <div class="col-sm-12">
-                                <input class="form-control" placeholder="Teléfono" type="text" required="">
-                            </div>
-                            <div class="col-sm-12">
-                                <textarea class="form-control textarea" placeholder="Mensaje"></textarea>
-                            </div>
-                        </div>
-                        <button class="main_bt">Enviar</button>
-                    </form>
-                    </div>   
-                    
+    <div class="heading">
+        <h2>Solicita <strong class="theme_blue">una Llamada</strong></h2>
+        <p style="font-size: 12px; color: #555; text-transform: lowercase; margin-top: 5px;">
+            "Cuentanos la necesidad que tienes o la descripción de tu catálogo de conceptos, seguro tenemos una solución "
+        </p>
+    </div>
+    <div class="full margin_top_20">
+        <form onsubmit="enviarPorWhatsApp(); return false;">
+            <div class="row">
+                <div class="col-sm-12">
+                    <input id="nombre" class="form-control" placeholder="Tu nombre" type="text" required>
                 </div>
+                <div class="col-sm-12">
+                    <input id="correo" class="form-control" placeholder="Correo electrónico" type="email" required>
+                </div>
+                <div class="col-sm-12">
+                    <input id="telefono" class="form-control" placeholder="Teléfono" type="text" required>
+                </div>
+                <div class="col-sm-12">
+                    <textarea id="mensaje" class="form-control textarea" placeholder="Mensaje" required></textarea>
+                </div>
+            </div>
+            <button type="submit" class="main_bt">Enviar</button>
+        </form>
+    </div>
+</div>
+
                 
             </div>
         </div>
@@ -282,7 +312,8 @@ Conoce los requisitos y certificaciones necesarias para iluminar vialidades.</p>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Información de Contacto</h3>
                             <p>Dirección:
-Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del Coyote<br><br>Tel/WhatsApp: 442 2333 003 <br><br>radiorifa@gmail.com</p>
+Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del Coyote<br><br>Tel/WhatsApp: 442-2333-003 <br><br>
+ventas@luminarias.com.mx</p>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h3>Paginas</h3>
@@ -293,29 +324,44 @@ Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del C
                               <a href="#blog">Blog</a><br>
                               <a href="#contact">Contacto</a>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Publicaciones Recientes</h3>
-                            <p><span><img src="images/f_b1.png"></span><span>Ventajas de cambiar a luminarias LED industriales<br>Ahorra hasta un 60% en consumo energético</span></p>
-                            <p class="margin_top_20"><span><img src="images/f_b2.png"></span><span>Cómo elegir la luminaria vial ideal para tu proyecto<br>potencia, óptica, altura de instalación y certificación.</span></p>
-                            <p class="margin_top_20"><span><img src="images/f_b3.png"></span><span>Tendencias 2025 en iluminación urbana<br>Diseños más eficientes, con sensores inteligentes y control remoto.</span></p>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Boletín de Novedades</h3>
-                            <p>
-                                <form>
-                                    <input type="text" name="email" placeholder="Ingresa tu correo electrónico:" /> 
-                                    <button>Suscríbete</button>
-                                </form>
-                            </p>
-                        </div>
-                    </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+    <h3>Publicaciones Recientes</h3>
+    <p><span><img src="images/f_b1.png"></span><span>Ventajas de cambiar a luminarias LED industriales<br>Ahorra hasta un 60% en consumo energético</span></p>
+    <p class="margin_top_20"><span><img src="images/f_b2.png"></span><span>Cómo elegir la luminaria vial ideal para tu proyecto<br>potencia, óptica, altura de instalación y certificación.</span></p>
+    <p class="margin_top_20"><span><img src="images/f_b3.png"></span><span>Tendencias 2025 en iluminación urbana<br>Diseños más eficientes, con sensores inteligentes y control remoto.</span></p>
+</div>  
+
+<div class="col-lg-7 col-md-6 col-sm-12">
+  <h3 style="margin-top: 0; margin-bottom: 25px;"></h3>
+  <div class="tags_seo" style="
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+    max-width: 600px;
+    font-size: 14px; 
+    line-height: 1.6; 
+    color: #333;
+    padding: 0;
+    margin: 0;
+  ">
+    <a href="#" style="text-decoration:none; color:#007bff;">#luminariasLED</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#alumbradoPublico</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#luminariasSolares</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#postesConcreto</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#instalacionElectrica</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#diseñoLumínico</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#ahorroEnergetico</a>
+    <a href="#" style="text-decoration:none; color:#007bff;">#Querétaro</a>
+  </div>
+</div>
             </div>
         </div>
-        <div class="copyright">
-            <div class="container">
-                <p>Copyright 2025. Todos los derechos reservados.
-            </div>
-        </div>
+        <div class="copyright" style="background-color: transparent;">
+    <div class="container">
+      <p style="color: black;">Copyright 2025. Todos los derechos reservados.</p>
+    </div>
+</div>
     </footer>
     <!-- end footer -->
     <!-- Javascript files-->
@@ -328,6 +374,23 @@ Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del C
     <!-- sidebar -->
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
+    <script>
+  function enviarPorWhatsApp() {
+    const nombre = document.getElementById("nombre").value;
+    const correo = document.getElementById("correo").value;
+    const telefono = document.getElementById("telefono").value;
+    const mensaje = document.getElementById("mensaje").value;
+
+    const numero = "524422333003"; // número de WhatsApp con código de país (52 = México)
+    const texto = `Hola, mi nombre es ${nombre}.%0ACorreo: ${correo}%0ATeléfono: ${telefono}%0AMensaje: ${mensaje}`;
+
+    const url = `https://wa.me/${numero}?text=${texto}`;
+    window.open(url, "_blank");
+  }
+</script>
+<div style="display:none;">
+  #luminariasLED #alumbradoPublico #luminariasSolares #postesConcreto #instalacionElectrica #diseñoLumínico #ahorroEnergetico #Querétaro
+</div>
 </body>
 
 </html>
