--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Nuestros equipos están diseñados para entornos exigentes, garantizando eficien
     <div class="container">
         <h2 style="font-weight: bold; font-size: 300%;">Baja tu consumo eléctrico: Interconexión Solar Industrial</h2>
         <p>Chatea con nosotros para asesorarte</p>
-        <img src="images/interconexion_solar_industrial_1.PNG" 
+        <img src="images/interconexion_solar_industrial_1.png" 
              alt="Ficha técnica Interconexión Solar Industrial 1" 
              width="612" height="792" 
              style="background:#fff; max-width:100%; height:auto; margin-top:20px;">
@@ -205,7 +205,7 @@ Montaje recomendado de 5 a 7 metros de altura. </p>
 <div class="section layout_padding" style="background-color: white; text-align: center;">
     <div class="container">
 <h2 style="font-weight: bold; font-size: 300%;">Solar Street 80 - Montaje en Poste 9</h2>
-       <img src="images/solar_street_80.PNG" alt="Ficha técnica Solar Street 80" width="612" height="792">
+       <img src="images/solar_street_80.png" alt="Ficha técnica Solar Street 80" width="612" height="792">
     </div>
 </div>
 
