--- a/index.html
+++ b/index.html
@@ -6,29 +6,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- SEO -->
-  <title>Luminarias LED Industriales y Viales | Jof México</title>
-  <meta name="description" content="Fabricamos luminarias LED industriales, viales y solares en México. Soluciones en interconexión industrial, campanas de alto rendimiento y alumbrado público.">
-  <meta name="keywords" content="luminarias LED, iluminación industrial, alumbrado vial, luminarias solares, iluminación exterior">
-  <meta name="author" content="Jof México">
+<!-- SEO -->
+<title>Luminarias LED Industriales y Viales | Jof México</title>
+<meta name="description" content="Fabricamos luminarias LED industriales, viales y solares en México. Soluciones en interconexión industrial, campanas de alto rendimiento y alumbrado público.">
+<meta name="author" content="Jof México">
 
-  <!-- Open Graph (para redes sociales) -->
-  <meta property="og:title" content="Luminarias LED Industriales y Viales | Jof México">
-  <meta property="og:description" content="Soluciones en luminarias LED industriales, solares y viales de alta eficiencia en México.">
-  <meta property="og:image" content="https://www.jofmexico.com/images/og-image.jpg"> <!-- Reemplaza con tu imagen -->
-  <meta property="og:url" content="https://www.jofmexico.com/">
-  <meta property="og:type" content="website">
+<!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="Luminarias LED Industriales en México | Jof México" />
+<meta property="og:description" content="Soluciones en iluminación LED industrial, solar y vial. Envío a toda la República Mexicana." />
+<meta property="og:image" content="https://luminarias.com.mx/images/og-luminarias-industriales.png">
+<meta property="og:url" content="https://luminarias.com.mx" />
+<meta property="og:type" content="website" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Luminarias LED Industriales en México | Jof México" />
+<meta name="twitter:description" content="Iluminación LED industrial, vial y solar con alta eficiencia energética." />
+<meta name="twitter:image" content="https://luminarias.com.mx/images/og-image.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="images/fevicon.png" type="image/png" />
+<!-- CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 
-  <!-- IE Support -->
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="canonical" href="https://luminarias.com.mx/">
+
+<!-- IE Support -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
