--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
 <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 
 <!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="manifest" href="site.webmanifest">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="canonical" href="https://luminarias.com.mx/">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
 <!-- IE Support -->
   <!--[if lt IE 9]>
