--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
                         <h2>Sobre Nosotros</h2>
                     </div>
                     <div class="full margin_top_20">
-                        <p>Somos una empresa mexicana con más de 20 años de experiencia dedicada a soluciones integrales de iluminación profesional, especializada en luminarias LED industriales, viales e Industriales. Ofrecemos productos de alto rendimiento, como luminarias tipo alumbrado público, luminarias solares con batería y panel solar integrado, campanas industriales LED postes metálicos, bases de concreto prefabricado y servicios completos de instalación.
-Nuestros equipos están diseñados para entornos exigentes, garantizando eficiencia energética, ahorro en consumo eléctrico y una larga vida útil. Brindamos asesoría técnica especializada y desarrollamos diseños luminotécnicos personalizados que cumplen con las normativas vigentes en México, asegurando calidad, seguridad y confort visual en cada proyecto.
+                        <p>Somos una empresa especializada en soluciones de iluminación LED profesional, con sede en Querétaro y cobertura en todo México. Contamos con amplia experiencia en proyectos industriales, viales y solares, ofreciendo venta, importación e instalación de luminarias LED de alta eficiencia.
+Diseñamos proyectos conforme a la normativa oficial mexicana, ayudando a empresas a reducir su consumo eléctrico y mejorar su rendimiento energético. Destacamos por haber sustituido 22,000 luminarias en Querétaro en 2018.
+Ofrecemos productos al mayoreo y menudeo como luminarias públicas, campanas industriales y lámparas solares, Confía en nuestra solución, para modernizar tu sistema de iluminación, cumplir normativas y reducir costos energéticos.
+
 </p>
                     </div>
                     <div class="full margin_top_30">
@@ -134,16 +136,29 @@ Nuestros equipos están diseñados para entornos exigentes, garantizando eficien
         </div>
     </div>
     <!-- end about -->
-     <!-- Baja tu consumo electrico: Interconexión Solar Industrial-->
+    <!-- Baja tu consumo electrico: Interconexión Solar Industrial-->
 <div class="section layout_padding" style="background-color: white; text-align: center;">
-    <div class="container">
-        <h2 style="font-weight: bold; font-size: 300%;">Baja tu consumo eléctrico: Interconexión Solar Industrial</h2>
-        <p>Chatea con nosotros para asesorarte</p>
-        <img src="images/interconexion_solar_industrial_1.png" 
-             alt="Ficha técnica Interconexión Solar Industrial 1" 
-             width="612" height="792" 
-             style="background:#fff; max-width:100%; height:auto; margin-top:20px;">
+  <div class="container">
+    <h2 style="font-weight: bold; font-size: 300%;">Baja tu consumo eléctrico: Interconexión Solar Industrial</h2>
+    <p>Desarrollamos soluciones en interconexión industrial para inversiones de hasta 8 millones de pesos.</p>
+    <p>Chatea con nosotros para asesorarte.</p>
+
+    <div class="row justify-content-center" style="margin-top: 20px;">
+      <!-- Primera imagen -->
+      <div class="col-md-6 col-sm-12">
+        <img src="images/interconexion_solar_industrial_1.png"
+             alt="Ficha técnica Interconexión Solar Industrial 1"
+             style="background:#fff; width:100%; height:auto;">
+      </div>
+
+      <!-- Segunda imagen -->
+      <div class="col-md-6 col-sm-12">
+        <img src="images/interconexion_solar_industrial_2.png"
+             alt="Ficha técnica Interconexión Solar Industrial 2"
+             style="background:#fff; width:100%; height:auto;">
+      </div>
     </div>
+  </div>
 </div>
     <!-- section -->
     <div id="fruits" class="section dark_bg layout_padding center-desk">
