--- a/index.html
+++ b/index.html
@@ -136,33 +136,28 @@ Ofrecemos productos al mayoreo y menudeo como luminarias públicas, campanas ind
         </div>
     </div>
     <!-- end about -->
-    <!-- Baja tu consumo electrico: Interconexión Solar Industrial-->
+<!-- Baja tu consumo electrico: Interconexión Solar Industrial -->
 <div class="section layout_padding" style="background-color: white; text-align: center;">
-  <div class="container">
-    <h2 style="font-weight: bold; font-size: 300%;">Baja tu consumo eléctrico: Interconexión Solar Industrial</h2>
-    <p>Desarrollamos soluciones en interconexión industrial para inversiones de hasta 8 millones de pesos.</p>
-    <p>Chatea con nosotros para asesorarte.</p>
+  <div class="container" style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
 
-    <div class="row justify-content-center" style="margin-top: 20px;">
-      <!-- Primera imagen -->
-      <div class="col-md-6 col-sm-12">
-        <img src="images/interconexion_solar_industrial_1.png"
-             alt="Ficha técnica Interconexión Solar Industrial 1"
-             style="background:#fff; width:100%; height:auto;">
-      </div>
-
-      <!-- Segunda imagen -->
-      <div class="col-md-6 col-sm-12">
-        <img src="images/interconexion_solar_industrial_2.png"
-             alt="Ficha técnica Interconexión Solar Industrial 2"
-             style="background:#fff; width:100%; height:auto;">
-      </div>
+    <div style="flex: 1 1 300px; max-width: 612px;">
+      <img src="images/interconexion_solar_industrial_1.png"
+           alt="Ficha técnica Interconexión Solar Industrial 1"
+           style="background:#fff; width: 100%; height: auto; margin-top:20px;">
     </div>
+
+    <div style="flex: 1 1 300px; max-width: 612px;">
+      <img src="images/interconexion_solar_2.png"
+           alt="Ficha técnica Interconexión Solar Industrial 2"
+           style="background:#fff; width: 100%; height: auto; margin-top:20px;">
+    </div>
+
   </div>
-</div>
-    <!-- section -->
-    <div id="fruits" class="section dark_bg layout_padding center-desk">
-        <div class="container">
+
+<!-- section -->
+<div id="fruits" class="section dark_bg layout_padding center-desk">
+  <div class="container">
+
             <div class="row">
                <div class="col-md-12">
                     <div class="heading full text_align_center">
