--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 <meta property="og:url" content="https://luminarias.com.mx" />
 <meta property="og:type" content="website" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-952929075">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-952929075');
+</script>
+
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Luminarias LED Industriales en México | Jof México" />
