--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <meta name="description" content="Fabricamos luminarias LED industriales, viales y solares en México. Soluciones en interconexión industrial, campanas de alto rendimiento y alumbrado público.">
   <meta name="author" content="Jof México">
 
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
+
   <!-- Canonical -->
   <link rel="canonical" href="https://luminarias.com.mx/" />
 
