--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
         }
     }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-952929075"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-952929075');
+  </script>
 </head>
 <body class="main-layout">
 
